# Glyph

./: AGENTS.md  README.md  explain.md
backend/: .env  .gitignore  AGENT.py  Dockerfile  TODO.md  app.py  docker-compose.yml  flowchart.py  llm.py  llmResponse.txt  manim.py  mantis_family_story_flowchart  modal_app.py  next.py  pyproject.toml  rag.py  requirements.txt  server.py  test.py
backend/glyphDB/: chroma.sqlite3
backend/src/: AGENT.py  agent_placeholder.py  bs  flowchart.py  future_rag.py  hf_embeddings.py  main.py  manim.py  manim_agent.py  rag.py  server.py  test.py  web-scrape-test.py
backend/supabase/.temp/: linked-project.json  pooler-url  project-ref
backend/supabase/migrations/: 00001_create_users_table.sql
client/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  test.html
client/app/: globals.css  layout.tsx  page.tsx
client/app/api/waitlist/: route.ts
client/app/app-components/: EmailInput.tsx  banner.tsx  header.tsx
client/app/app-components/canvas/: canvas-overlay.tsx  helpers.ts  markdown-block.tsx  query-dock.tsx  types.ts
client/app/components/: banner.tsx
client/app/components/canvas/: canvas-overlay.tsx  helpers.ts  types.ts
client/app/fullcanvas/: not_page.tsx  page.tsx
client/app/landings/: landing.tsx
client/app/login/: page.tsx
client/components/: Aurora.css  Aurora.jsx  Dither.jsx  PixelBlast.jsx  Prism.css  Prism.jsx
client/components/canvas/: canvas-overlay.tsx  helpers.ts  icons.tsx  query-dock.tsx
client/lib/: auth.tsx  db.ts
client/lib/models/: Waitlist.ts
client/types/: markdown-it.d.ts
