[project]
name = "backend-Glyph"
version = "0.1.0"
description = "the backend for the glyph application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.1.3",
    "python-dotenv>=1.2.1",
]
